@@ -1,0 +1,54 @@
+<sect1 id="config-behavior">
+  <title>Toolbars and Menus</title>
+  <para>
+    <application>Gnome</application> allows for the user to configure
+    many settings of their desktop.  Anything from the background
+    image to where buttons are located can be set.  The
+    <guilabel>Behavior</guilabel> window is responsible for a lot of
+    the finer settings.
+  </para>
+  <para>
+    If you open up the <guilabel>Behavior</guilabel> window, you'll
+    find a few options at your disposal to make your
+    <application>Gnome</application> experience better.
+  </para>
+  <sect2 id="config-behavior-toolbar">
+    <title>Toolbar Options</title>
+    <para>
+      The top half of the window shows you toolbar options.
+    </para>
+    <para>
+      In the <guilabel>Toolbars have</guilabel> section, you'll see
+      three options available: Icons and Text, Only Icons, Only Text.
+    </para>
+    <para>
+      The Icons and Text makes the toolbars display both icons and
+      text.  While this takes up the most space, it is the most
+      informative.
+    </para>
+    <para>
+      The Only Icons options makes the toolbars show only icons.  This
+      isn't the most descriptive, but helps save space.
+    </para>
+    <para>
+      The Only Text options is the most simple options.  However, it
+      is easily the most descriptive option.
+    </para>
+    <para>
+      Below that option is a button called <guibutton>Toolbars can be
+      detached and moved around</guibutton>.  This allows you to take
+      a toolbar off the window and place it anywhere in the screen you
+      wish.  You can demo this in the <guilabel>Sample
+      Toolbar</guilabel> below.  On the left side is a textured bar.
+      Click that and drag around the screen.  That toolbar will detach
+      and be dropped where you let go of the cursor.
+    </para>
+  </sect2>
+  <sect2 id="config-behavior-menus">
+    <title>Menu Options</title>
+    <para>
+      Menus can also be configured.  You can have menu items have
+      icons.  This is nice to help identify what things do.
+    </para>
+  </sect2>
+</sect1>
