@@ -1,0 +1,64 @@
+<sect1 id="config-cd">
+  <title>Audio CDs</title>
+  <para>
+    Gnome can play your CDs on your computer.  You can setup you
+    CD preferences in the <guibutton>CD Properties</guibutton> capplet
+    in the <guilabel>Advanced</guilabel> section of the
+    <application>Gnome Control Center</application>.  
+  </para>
+  <para>
+    Once open, you'll see the window is broken into two sections: Data
+    CDs and Audio CDs.
+  </para>
+  <sect2 id="config-cd-data">
+    <title>Data CDs</title>
+    <para>
+      Data CDs are CDs which hold information that the system can
+      execute.  These often times include CDs that have programs or a
+      CD which you burned family pictures to. 
+    </para>
+    <para>
+      The first option is <guibutton>Automatically mount CD when
+      inserted</guibutton>.  By enabling this option, you can have
+      your CD auto-detected when you insert it.
+    </para>
+    <tip>
+      <title>What is mounting</title>
+      <para>
+	Linux and Unix systems use a term called mounting to identify
+	recognizing a device.  If you "mount" your CD-ROM, that means
+	that your system can recognize the CD-ROM and you can interact
+	with it.  If it us unmounted, then the system does not know of
+	its existance and can do almost nothing with it.
+      </para>
+    </tip>
+    <para>
+      The second option, <guibutton>Automatically start auto-run
+      program on newly mounted CD</guibutton> allows the system to run
+      the program on the CD automatically when the disk is first mounted.
+    </para>
+    <para>
+      The last option, <guibutton>Open file manager window for newly
+      mounted CD</guibutton> tells the system to open your file
+      manager (<application>Nautilus</application> by default) when the
+      CD is mounted.  This is useful if you have a CD of images from
+      your family reunion you wish to browse.  It will open up in
+      <application>Nautilus</application> which will let you view the
+      thumbnails.
+    </para>
+  </sect2>
+  <sect2 id="config-cd-audio">
+    <title>Audio CDs</title>
+    <para>
+      The <guilabel>Audio CDs</guilabel> section has only one option.
+      This allows the system to load up a CD player when you insert
+      the CD.  You simply click the checkbox and enter the command you
+      wish to run in the input dialog.
+    </para>
+    <note>
+      <para>
+	Audio CDs don't need to be mounted to play the CD.
+      </para>
+    </note>
+  </sect2>
+</sect1>
