@@ -189,7 +189,7 @@
 		</listitem>
 	      </varlistentry>
 	    </variablelist>
-	  </listitem
+	  </listitem>
 	</varlistentry>
       </variablelist>
     </para>
