@@ -9,7 +9,8 @@
 <!ENTITY CONFIG-KBD SYSTEM "config-kbd.xml">
 <!ENTITY CONFIG-MOUSE SYSTEM "config-mouse.xml">
 <!ENTITY CONFIG-SCREENSAVER SYSTEM "config-screensaver.xml">
-
+<!ENTITY CONFIG-BEHAVIOR SYSTEM "config-behavior.xml">
+<!ENTITY CONFIG-CD SYSTEM "config-cds.xml">
 ]>
 
 <article id="index" lang="en">
@@ -204,7 +205,7 @@
       configure more advanced properties of your GNOME environment.
       <variablelist>
 	<varlistentry>
-	  <term>Behavior</term>
+	  <term><xref linkend="config-behavior" /></term>
 	  <listitem>
 	    <para>
 	      Configures small user interface options such as where
@@ -213,7 +214,7 @@
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term>CD Properties</term>
+	  <term><xref linkend="config-cd" /></term>
 	  <listitem>
 	    <para>
 	      Sets up how GNOME treats your CD-ROM.
@@ -420,4 +421,6 @@
 &CONFIG-MOUSE;
 &CONFIG-SOUND;
 &CONFIG-SCREENSAVER;
+&CONFIG-BEHAVIOR;
+&CONFIG-CD;
 </article>
