@@ -1,3 +1,11 @@
+2002-02-19  Kevin Breit  <mrproper@ximian.com>
+
+	* C/config-cds.xml: Wrote the documentation for this.  Added to CVS.
+
+	* C/config-html.xml: Fixed a typo that caused building to break.
+
+	* C/control-center.xml: Added behavior and cds documentation to the list.
+
 2002-02-15  Kevin Breit  <mrproper@ximian.com>
 
 	* C/config-behavior.xml: Rewrote this for Gnome 2.
